@@ -1,3 +1,7 @@
+2005-07-18  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* fixed bug cutting off diagram labels on printings
+
 2005-07-16  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* property text position of subcircuit does not change
